# my_assistant

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
app/routes/: api.py  auth.py  calendar.py
app/templates/: calendar.html  email.html  index.html
frontend/: package.json
frontend/src/: app.css
frontend/src/components/: Dashboard.svelte  EmailView.svelte  Header.svelte
frontend/src/stores/: chatStore.ts
personal_assistant/: .env.example
personal_assistant/agents/: assistant.py  calendar_agent.py  email_agent.py
personal_assistant/app/: main.py
personal_assistant/app/templates/: base.html
personal_assistant/frontend/: README.md  tailwind.config.js  tsconfig.json  vite.config.ts
personal_assistant/frontend/src/: App.svelte
personal_assistant/frontend/src/components/: CalendarView.svelte  ChatView.svelte  Sidebar.svelte
personal_assistant/frontend/src/services/: openaiService.ts  userService.ts
personal_assistant/frontend/src/stores/: calendarStore.ts  emailStore.ts  navigationStore.ts
personal_assistant/frontend/src/types/: openai.d.ts
personal_assistant/services/: calendar.py  gmail.py
personal_assistant/static/css/: style.css
personal_assistant/utils/: helpers.py
services/: web_search.py
src/: config.py
src/services/: agent_service.py  google_api.py
src/ui/: interface.py
src/utils/: logger.py
static/js/: main.js
utils/: auth.py
