[project]
name = "my-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Oscar",email = "oscarkirschstein@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
